src/test/ui/methods/method-self-arg-1.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/method-self-arg-1.rs:11:5
   |
LL |     Foo::bar(x);
   |     ^^^^^^^^^-^
   |              |
   |              expected `&Foo`, found `Foo`
   |
note: associated function defined here
  --> $DIR/method-self-arg-1.rs:6:8
   |
LL |     fn bar(&self) {}
   |        ^^^ -----
help: provide an argument of the correct type
   |
LL |     bar({&Foo});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/method-self-arg-1.rs:13:5
   |
LL |     Foo::bar(&42);
   |     ^^^^^^^^^---^
   |              |
   |              expected `&Foo`, found `&{integer}`
   |
note: associated function defined here
  --> $DIR/method-self-arg-1.rs:6:8
   |
LL |     fn bar(&self) {}
   |        ^^^ -----
help: provide an argument of the correct type
   |
LL |     bar({&Foo});
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
